--- a/M431/projekte/iperka-auftrag/package.json
+++ b/M431/projekte/iperka-auftrag/package.json
@@ -13,11 +13,14 @@
     "@dnd-kit/sortable": "^10.0.0",
     "@radix-ui/react-select": "^2.2.5",
     "@radix-ui/react-slot": "^1.2.3",
+    "chart.js": "^4.4.9",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.512.0",
     "next": "15.3.3",
+    "openmeteo": "^1.2.0",
     "react": "^19.0.0",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.0.0",
     "tailwind-merge": "^3.3.0",
     "uuid": "^11.1.0"
